# Forest-Soul-Forge

./: .dockerignore  .env.example  .fuse_hidden0000000400000001  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  Dockerfile.test  KERNEL.md  LICENSE  LICENSE.history  README.md  SESSION-HANDOFF.md  STANDARD.md  STATE.md  a5-finalize.command  activate-scheduled-tasks.command  birth-dashboard-watcher.command  birth-specialist-stable.command  clean-git-locks.command  commit-and-tag-v0.1.2.command  commit-burst105-plugin-daemon.command  commit-burst106-plugin-audit.command  commit-burst42-tranche1.command  commit-burst42-tranche2.command  commit-burst43-tranche3c.command  commit-burst44-tranche4b.command  commit-burst46.command  commit-burst48.command  commit-burst49.command  commit-burst50.command  commit-burst53.command  commit-burst54.command  commit-burst55.command  commit-burst57.command  commit-burst58.command  commit-burst59.command  (+70 more)
.github/workflows/: canon.yml
apps/desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/desktop/icons/: README.md
apps/desktop/src/: main.rs
audit/: README.md
benchmarks/investigator/: correlation_recall.v1.yaml
benchmarks/observer/: false_positive_rate.v1.yaml  signal_detection.v1.yaml  tool_invocation_focus.v1.yaml
config/: agent_quarantine.yaml  constitution_templates.yaml  genres.yaml  ground_truth.yaml  handoffs.yaml  mcp_servers.yaml.example  scheduled_tasks.yaml.example  security_iocs.yaml  telemetry_sources.yaml  tool_catalog.yaml  trait_tree.yaml
config/compliance_frameworks/: soc2.yaml
config/detection_rules/: directory_service_account_enum.yml  gatekeeper_disable_attempt.yml  keychain_credential_access.yml  launchdaemon_persistence_write.yml  opendirectory_auth_error.yml  osascript_interpreter_spawn.yml  reverse_shell_listener_port.yml  xprotect_malware_flagged.yml
config/domains/: d10_research_lab.yaml  d1_knowledge_forge.yaml  d2_daily_life_os.yaml  d3_local_soc.yaml  d4_code_review.yaml  d5_smart_home.yaml  d6_finance.yaml  d7_content_studio.yaml  d8_compliance.yaml  d9_learning_coach.yaml
config/playbooks/: gatekeeper-disable-response.yml  launchdaemon-persistence-triage.yml  reverse-shell-contain.yml
config/purple_pete_scenarios/: keychain-credential-access.yml  osascript-shell-spawn.yml  process-discovery-gap.yml  reverse-shell-beacon.yml  spctl-gatekeeper-disable.yml
config/scenarios/: fizzbuzz.yaml
config/tasks/: benchmark.yaml  training.yaml
data/: .gitkeep
demo/golden/: README.md  SHOWHN.md  golden-demo.cast  golden-demo.command  golden_demo.py  golden_demo_live.py
demo/synapse/: synapse_demo.py
dev-tools/: _fsf-env.sh  audit-orphan-constitutions.py  birth-analyst.command  birth-assessor.command  birth-audit-archivist.command  birth-bill-steward.command  birth-budget-analyst.command  birth-comfort-optimizer.command  birth-compliance-scanner.command  birth-content-researcher.command  birth-coordinator.command  birth-critic.command  birth-curriculum-designer.command  birth-d1-knowledge-forge.command  birth-d10-research-lab.command  birth-d2-daily-life-os.command  birth-d3-phase-a.command  birth-d4-advanced.command  birth-d5-smart-home.command  birth-d6-finance.command  birth-d7-content-studio.command  birth-d8-compliance.command  birth-d9-learning-coach.command  birth-dashboard-watcher.command  birth-debate-moderator.command  birth-detection-engineer.command  birth-distribution-pilot.command  birth-editor.command  birth-energy-warden.command  birth-evidence-collector.command  birth-forensic-archivist.command  birth-gatherer.command  birth-home-sentinel.command  birth-home-steward.command  birth-inbox-triager.command  birth-investment-researcher.command  birth-knowledge-verifier.command  birth-lab-synthesizer.command  birth-librarian.command  birth-mentor.command  (+88 more)
dev-tools/benchmark/: README.md  run-benchmarks.command  run_substrate_perf.py
dev-tools/commit-bursts/: commit-adr0045-trust-light.command  commit-audit-v0.1.1.command  commit-burst101-daemon-binary.command  commit-burst102-audience-and-integrations.command  commit-burst103-adr0043.command  commit-burst104-plugin-cli.command  commit-burst107-dispatcher-bridge.command  commit-burst108-example-plugins.command  commit-burst109-state-changelog-v0.5.command  commit-burst111-per-tool-approval.command  commit-burst112-frontend-mcp-plugins.command  (+368 more)
docs/: DEMO-SCRIPT.md  PROGRESS.md  dev-tools.md  external-review-readiness.md  integrator-pitch.md  integrator-quickstart.md  tool-risk-guide.md
examples/: README.md  anomaly_investigator_default.constitution.yaml  anomaly_investigator_default.soul.md  audit_chain.jsonl  audit_chain.sample.jsonl  incident_communicator_default.constitution.yaml  incident_communicator_default.soul.md  lineage_child_scout.constitution.yaml  lineage_child_scout.soul.md  lineage_grandchild_forager.constitution.yaml  lineage_grandchild_forager.soul.md  lineage_parent_huntmaster.constitution.yaml  lineage_parent_huntmaster.soul.md  log_analyst_default.constitution.yaml  log_analyst_default.soul.md  network_watcher_default.constitution.yaml  network_watcher_default.soul.md  operator_companion_default.constitution.yaml  operator_companion_default.soul.md  stress_contradictory_certainty.constitution.yaml  stress_contradictory_certainty.soul.md  stress_multiple_flags.constitution.yaml  stress_multiple_flags.soul.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  serve.py  vitest.config.js
mcp_connector/: README.md  __init__.py  server.py  tools.py
scenarios/: README.md  load-scenario.command
scripts/: birth-self-improve.command  birth-specialist-stable.sh  demo_generate_soul.py  docker-entrypoint.sh  docker_test.sh  fsf-priv  fsf-sudoers  headless-smoke.sh  initial_push.sh  live-smoke.sh  run_tests_no_pytest.py  security-smoke.sh  security-swarm-birth.sh  security-swarm-install-skills.sh  self_improve.py  verify_audit_chain.py  verify_constitution.py  verify_grading.py
tests/: conftest.py  test_self_improve.py
(+1061 files in other folders)
