[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forest-soul-forge"
version = "0.0.1"
description = "Local-first blue-team personal agent factory — trait-controlled, audit-logged AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Price" }]
keywords = ["ai-agents", "blue-team", "local-first", "langgraph", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
daemon = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
    # ADR-003X Phase C1 — per-agent encrypted secrets store. AES-256-GCM
    # via the standard `cryptography` package. ~3 MB wheel; only needed
    # when secrets are actually configured (the import is lazy in
    # core/secrets.py so daemon boots fine without it for now).
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/StellarRequiem/Forest-Soul-Forge"

[project.scripts]
# ADR-0030 Tool Forge CLI / ADR-0031 Skill Forge CLI dispatch through
# this single entry point. ``fsf forge tool ...`` and ``fsf forge skill
# ...`` are the canonical surfaces; future subcommands (``fsf agents``,
# ``fsf audit``) hang off the same root.
fsf = "forest_soul_forge.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_soul_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
