[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forest-soul-forge"
version = "0.2.0"
description = "Local-first blue-team personal agent factory — trait-controlled, audit-logged AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Price" }]
keywords = ["ai-agents", "blue-team", "local-first", "langgraph", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
daemon = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
    # ADR-003X Phase C1 — per-agent encrypted secrets store. AES-256-GCM
    # via the standard `cryptography` package. ~3 MB wheel; only needed
    # when secrets are actually configured (the import is lazy in
    # core/secrets.py so daemon boots fine without it for now).
    "cryptography>=42.0",
]

# ADR-003X Phase C3 — browser_action.v1 wraps Playwright. Heaviest
# of the open-web primitives: Playwright Python bindings + a chromium
# binary. Operator runs `python -m playwright install chromium`
# after the editable install to download the browser (~150 MB; one
# time per major version). Firefox + webkit deliberately excluded
# to keep CVE surface small; agents that need cross-browser testing
# can install those manually. Lazy import in tools/builtin/browser_action.py
# so the daemon boots fine without playwright until an agent
# actually dispatches a browser_action call.
browser = [
    "playwright>=1.40",
]

# ADR-0044 P4 — kernel API conformance test suite. External integrators
# install with `pip install forest-soul-forge[conformance]` and run
# pytest tests/conformance/ against any Forest-kernel build's running
# daemon. Tests are HTTP-only (no internal Python imports); they
# exercise the seven ABI surfaces enumerated in docs/spec/kernel-api-v0.6.md
# and produce a pass/fail report keyed to spec section numbers.
conformance = [
    "pytest>=8.0",
    "httpx>=0.26",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/StellarRequiem/Forest-Soul-Forge"

[project.scripts]
# ADR-0030 Tool Forge CLI / ADR-0031 Skill Forge CLI dispatch through
# this single entry point. ``fsf forge tool ...`` and ``fsf forge skill
# ...`` are the canonical surfaces; future subcommands (``fsf agents``,
# ``fsf audit``) hang off the same root.
fsf = "forest_soul_forge.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_soul_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
