[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forest-soul-forge"
version = "0.2.0"
description = "Local-first blue-team personal agent factory — trait-controlled, audit-logged AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Price" }]
keywords = ["ai-agents", "blue-team", "local-first", "langgraph", "ollama", "source-available", "elastic-license-v2"]
# ADR-0046 Amendment 1 (2026-05-12, B245): license switched from
# Apache 2.0 to Elastic License 2.0 (ELv2). The PyPI classifier
# below switched to "Other/Proprietary License" since ELv2 is not
# OSI-approved. See LICENSE + LICENSE.history for the cutover.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    # ADR-0054 procedural-shortcut substrate ships numpy-backed
    # semantic embeddings. The substrate is OFF by default, but
    # 4 unit-test modules (test_procedural_*, test_memory_tag_outcome)
    # import the substrate code and need numpy at collection time.
    # Including it under [dev] keeps the standard test command
    # (`pytest`) able to collect the whole suite without
    # ModuleNotFoundError, while [procedural] below is the
    # opt-in extra for runtime use.
    "numpy>=1.26",
]
daemon = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # ADR-0070 T2 (B287) — /voice/transcribe uses FastAPI Form(...)
    # decorators which require python-multipart at module load time.
    # Caught 2026-05-16 when force-restart-daemon rebuilt the venv
    # and python-multipart wasn't installed (it had been present
    # transitively before some other dep removed it). Promoting to
    # an explicit hard dep so the daemon extras-set is self-
    # contained.
    "python-multipart>=0.0.20",
    "httpx>=0.26",
    # ADR-003X Phase C1 — per-agent encrypted secrets store. AES-256-GCM
    # via the standard `cryptography` package. ~3 MB wheel; only needed
    # when secrets are actually configured (the import is lazy in
    # core/secrets.py so daemon boots fine without it for now).
    "cryptography>=42.0",
    # ADR-0050 T2 (B267) — SQLCipher binding for at-rest encryption
    # of registry.sqlite. Drop-in DB-API 2.0 replacement for stdlib
    # sqlite3; opens encrypted DBs via the same Connection / Cursor
    # surface. Used ONLY when FSF_AT_REST_ENCRYPTION=true; the
    # import in registry/registry.py is lazy so operators who don't
    # enable encryption never pay the wheel cost. Pre-built wheels
    # available for macOS arm64+x86_64 and Linux x86_64+arm64; Windows
    # operators may need to compile (out of scope for v1 per ADR
    # Decision 2).
    "sqlcipher3-binary>=0.5.4",
]

# ADR-003X Phase C3 — browser_action.v1 wraps Playwright. Heaviest
# of the open-web primitives: Playwright Python bindings + a chromium
# binary. Operator runs `python -m playwright install chromium`
# after the editable install to download the browser (~150 MB; one
# time per major version). Firefox + webkit deliberately excluded
# to keep CVE surface small; agents that need cross-browser testing
# can install those manually. Lazy import in tools/builtin/browser_action.py
# so the daemon boots fine without playwright until an agent
# actually dispatches a browser_action call.
browser = [
    "playwright>=1.40",
]

# ADR-0054 — procedural-shortcut substrate. Stores per-tool-call
# outcome embeddings (small float32 vectors) keyed by canonical
# claim hash so future calls can shortcut to a known-good answer.
# Numpy is the only new runtime dep; substrate is OFF by default
# until ADR-0054 T6 wires the chat-thumbs UI. Operators who want
# to enable the substrate today install with
# `pip install forest-soul-forge[procedural]` and flip the
# substrate flag in daemon config. Numpy is ~30 MB; kept out of
# the base install since most users won't need it.
procedural = [
    "numpy>=1.26",
]

# ADR-0044 P4 — kernel API conformance test suite. External integrators
# install with `pip install forest-soul-forge[conformance]` and run
# pytest tests/conformance/ against any Forest-kernel build's running
# daemon. Tests are HTTP-only (no internal Python imports); they
# exercise the seven ABI surfaces enumerated in docs/spec/kernel-api-v0.6.md
# and produce a pass/fail report keyed to spec section numbers.
conformance = [
    "pytest>=8.0",
    "httpx>=0.26",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/StellarRequiem/Forest-Soul-Forge"

[project.scripts]
# ADR-0030 Tool Forge CLI / ADR-0031 Skill Forge CLI dispatch through
# this single entry point. ``fsf forge tool ...`` and ``fsf forge skill
# ...`` are the canonical surfaces; future subcommands (``fsf agents``,
# ``fsf audit``) hang off the same root.
fsf = "forest_soul_forge.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_soul_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
